# ChangeLog for dev-python/dulwich
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/dulwich/ChangeLog,v 1.30 2011/05/31 20:20:33 maekke Exp $

  31 May 2011; Markus Meier <maekke@gentoo.org> dulwich-0.7.1.ebuild:
  x86 stable, bug #367299

  22 May 2011; Joseph Jezak <josejx@gentoo.org> dulwich-0.7.0.ebuild,
  dulwich-0.7.1.ebuild:
  Marked ~ppc for bug #365913.

  15 May 2011; Christoph Mende <angelos@gentoo.org> dulwich-0.7.1.ebuild:
  Stable on amd64 wrt bug #367299

  15 Apr 2011; Fabian Groffen <grobian@gentoo.org> dulwich-0.7.1.ebuild:
  Marked ~x64-solaris

*dulwich-0.7.1 (13 Apr 2011)

  13 Apr 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +dulwich-0.7.1.ebuild:
  Version bump.

  08 Apr 2011; Thomas Kahle <tomka@gentoo.org> dulwich-0.7.0.ebuild:
  x86 stable per bug 360343

  24 Mar 2011; Christoph Mende <angelos@gentoo.org> dulwich-0.7.0.ebuild:
  Stable on amd64 wrt bug #360343

  13 Mar 2011; Fabian Groffen <grobian@gentoo.org> dulwich-0.7.0.ebuild:
  Marked ~x86-macos

*dulwich-0.7.0 (12 Feb 2011)

  12 Feb 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +dulwich-0.7.0.ebuild:
  Version bump.

  28 Nov 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -dulwich-0.6.1.ebuild:
  Delete.

  17 Nov 2010; Markus Meier <maekke@gentoo.org> dulwich-0.6.2.ebuild:
  amd64/x86 stable, bug #345499

*dulwich-0.6.2 (17 Oct 2010)

  17 Oct 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +dulwich-0.6.2.ebuild:
  Version bump.

  19 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -dulwich-0.6.0.ebuild:
  Delete.

  19 Sep 2010; Markos Chandras <hwoarang@gentoo.org> dulwich-0.6.1.ebuild:
  Stable on amd64 wrt bug #337134

  17 Sep 2010; Christian Faulhammer <fauli@gentoo.org> dulwich-0.6.1.ebuild:
  stable x86, bug 337134

*dulwich-0.6.1 (23 Jul 2010)
