@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/dulwich
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/dulwich/ChangeLog,v 1.30 2011/05/31 20:20:33 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/dulwich/ChangeLog,v 1.31 2011/06/06 08:31:12 djc Exp $
+
+  06 Jun 2011; Dirkjan Ochtman <djc@gentoo.org> -dulwich-0.7.0.ebuild:
+  Remove old version.
 
   31 May 2011; Markus Meier <maekke@gentoo.org> dulwich-0.7.1.ebuild:
   x86 stable, bug #367299
